# SDLVIZ

./: CMakeLists.txt  README.md
lib/gladloader/: CMakeLists.txt
lib/gladloader/include/glad/: glad.h
lib/gladloader/src/: glad.c
lib/imgui/: CMakeLists.txt
resources/: Dockerfile  index.html  sin.frag
src/: Window.cpp  Window.hpp  main.cpp
src/gfx/: BufferObject.cpp  BufferObject.hpp  ShaderBuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  gl.h
src/gfx/shader/: ShaderInput.hpp  ShaderSource.hpp
src/gfx/shader/input/: ResolutionUniform.hpp  TimeUniform.hpp
src/ui/: MainUI.cpp  MainUI.hpp
